--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 /* body font */
 body{
     font-family: 'Poppins', sans-serif;
+    width: 1440px;
 }
 
 
@@ -38,27 +39,21 @@ body{
 /* players part */
 
 .players-container{
-    position: relative;
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    
-    
-   
-
+    margin-left: 180px;
+    margin-right: 210px;
+    margin-top: 70px;
 }
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
-    
-    justify-content: center;
+    column-gap: 30px;
+    row-gap: 27px; 
 }
-.player {
-    
-    width: 330px;
-    height: 474px;
-    padding: 15px;
+.player-article{
+    margin: 15px;
+
+}
+.player {  
     background-color: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);  
 }
@@ -66,16 +61,27 @@ body{
     width: 300px;
     height: 256px;
 }
-.player-details{
-    width: 300px;
-    height: 154px;
+
+/* footer part */
+footer{
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
-.player-title{
-    width: 300px;
-    height: 40px;
+.footer-section{
+    width: 484px;
+    text-align: center;
+
 }
-.player-info{
-    width: 300px;
-    height: 104px;
-    top: 50px;
+.footer-section img{
+    width: 484px;
+    height: 110px; 
+}
+.icon{
+    margin: 7px;
+    color: #969bab;
+    height: 32px;
+    width: 32px;
 }
