--- a/styles/style.css
+++ b/styles/style.css
@@ -114,9 +114,15 @@ footer{
         
 
     }
+    .link{
+        width: 168px;
+        height: 44px;
+        margin-top: 30px;
+    }
     .banner-img img{
         width: 329px;
         height: 259.17px;
+        margin-top: 50px;
     }
 
     }
